# LimeSuiteNG

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  Changelog.txt  DebPackage22.Dockerfile  DebPackage24.Dockerfile  README.md  TestCoverage.Dockerfile  install_dependencies.sh
GUI/: CMakeLists.txt  CommsToDevice.h  DeviceConnectionPanel.cpp  DeviceConnectionPanel.h  SDRConfiguration_view.cpp  SDRConfiguration_view.h  commonWxForwardDeclarations.h  commonWxHeaders.h  dlgAbout.cpp  dlgAbout_view.cpp  dlgAbout_view.h  events.cpp  events.h  limeGUI.cpp  limeGUI.h  limeGUIFrame.cpp  limeGUIFrame.h  lms7suiteApp.cpp  lms7suiteAppFrame.cpp  lms7suiteAppFrame.h
GUI/DSP/: CMakeLists.txt
GUI/FPGAcontrols_wxgui/: FPGAcontrols_wxgui.cpp
GUI/LMS_Programing/: LMS_Programing_wxgui.cpp  LMS_Programing_wxgui.h
GUI/LMS_Programming/: LMS_Programming_wxgui.cpp
GUI/boards/: CMakeLists.txt  pnlBoardControls.cpp  pnlBoardControls.h  pnlBuffers.cpp  pnlGPIO.cpp  pnlGPIO.h  pnlLimeSDR.cpp  pnlLimeSDR.h  pnlX3.cpp  pnlX8.cpp  pnlX8.h  pnlXTRX.cpp  pnlXTRX.h  pnluLimeSDR.cpp  pnluLimeSDR.h
GUI/chips/: CMakeLists.txt
GUI/fftviewer_wxgui/: fftviewer_frFFTviewer.cpp  fftviewer_frFFTviewer.h  fftviewer_wxgui.cpp  fftviewer_wxgui.h
GUI/numericSlider/: numericSlider.cpp  numericSlider.h
GUI/oglGraph/: CMakeLists.txt  GLFont.cpp  GLFont.h  OpenGLGraph.cpp  OpenGLGraph.h  dlgMarkers.cpp  dlgMarkers.h
GUI/parsers/: CoefficientFileParser.h
GUI/resources/: splash.h
GUI/utility/: SPI_wxgui.cpp  SPI_wxgui.h  pnlMiniLog.cpp  utilities_gui.cpp  utilities_gui.h
SoapyLMS7/: CMakeLists.txt
cli/: CMakeLists.txt  common.cpp  common.h  limeConfig.cpp  limeDevice.cpp  limeFLASH.cpp  limeOEM.cpp  limeSPI.cpp  limeTRX.cpp
cli/equalizer/: CMakeLists.txt  FDQIEconfig.cpp  FDQIEconfig2.cpp  FDQIEdesign.cpp  FDQIdesign.h  FDQIspi.cpp  FDQIspi.h  calDC.c  equAPI.cpp  report.c
docs/doxygen/: CMakeLists.txt  Doxyfile.in  DoxygenConfig.in  index.rst
embedded/: CMakeLists.txt
embedded/gfir/: CMakeLists.txt  corrections.c  dfilter.h  gfir_lms.c  lms.c  lms.h  lms_gfir.h  recipes.c  recipes.h  rounding.c  rounding.h
embedded/lms7002m/: CMakeLists.txt  calibrations.c  csr.h  csr_data.h  lms7002m.c  lms7002m_context.h  privates.c  privates.h  save_state.c  spi.c  spi.h
plugins/: CMakeLists.txt
plugins/Desktop/: CMakeLists.txt
plugins/HDSDR/: .clang-format  .gitignore  CMakeLists.txt
plugins/QuickTest/: CMakeLists.txt  LimeSDRTest.cpp
plugins/SoapyLMS7/: CMakeLists.txt  Registration.cpp  Settings.cpp  SoapyLMS7.h  Streaming.cpp
plugins/Soapy_limesuiteng/: BasicStreamTests.py  CMakeLists.txt  README.md  Registration.cpp  Settings.cpp  Soapy_limesuiteng.h  Streaming.cpp
plugins/amarisoft-plugin/: CMakeLists.txt  common.cpp  common.h  configExample.cfg  trx_driver.h  trx_limesuite.cpp
plugins/gr-limesdr/: .gitignore  CMakeLists.txt  README.md  patch_gnuradio.patch
plugins/octave/: CMakeLists.txt  LimeSuiteNG.cc  rx.m  rx_2ch.m  trx.m  tx.m  wfm.m
src/: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  DeviceTreeNode.h  EnumToString.cpp  LimeSuite.pc.in  Logger.cpp  Logger.h  OEMTesting.cpp  OEMTesting.h  StreamComposite.cpp  SystemResources.h  SystemResources.in.cpp  VersionInfo.h  VersionInfo.in.cpp  dlgAbout.cpp  dlgAbout_view.cpp  gnuPlotPipe.h  limesuiteng.pc.in  lms7suiteApp.cpp  lms7suiteApp.h  lms7suiteAppFrame.cpp  lms7suiteAppFrame.h
src/ADF4002/: ADF4002.cpp  ADF4002.h  ADF4002_wxgui.cpp  ADF4002_wxgui.h
src/API/: LMS_APIWrapper.cpp  LimePlugin.cpp  gainTable.h
src/CDCM6208/: CDCM6208_Dev.cpp  CDCM6208_Dev.h  CDCM6208_panelgui.cpp  CDCM6208_panelgui.h
src/DSP/: CMakeLists.txt  Equalizer.cpp  Equalizer.h  EqualizerCSR.cpp  EqualizerCSR.h  FFT.cpp  FFT.h
src/FPGA/: FPGA_common.cpp  FPGA_common.h  GatewareFeatures.h  WriteRegistersBatch.cpp  WriteRegistersBatch.h
src/FPGA_common/: FPGA_common.cpp  FPGA_common.h
src/FPGAcontrols_wxgui/: FPGAcontrols_wxgui.cpp  FPGAcontrols_wxgui.h
src/GFIR/: CMakeLists.txt  corrections.c  dfilter.h  gfir_lms.c  lms.c
src/GUI/: CommsToDevice.h  DeviceConnectionPanel.cpp  DeviceConnectionPanel.h  ILMS7002MTab.cpp  ILMS7002MTab.h
src/LMS_Programing/: LMS_Programing_wxgui.cpp  LMS_Programing_wxgui.h
src/Si5351C/: Si5351C.cpp  Si5351C.h  Si5351C_wxgui.cpp  Si5351C_wxgui.h
src/boards/: BoardSupportLoader.in.cpp  CMakeLists.txt  DeviceFactoryFTDI.cpp  DeviceFactoryFTDI.h  DeviceFactoryFX3.cpp  DeviceFactoryFX3.h  DeviceFactoryPCIe.cpp  DeviceFactoryPCIe.h  DeviceHandle.cpp  DeviceRegistry.cpp  LMS7002M_SDRDevice.cpp  LMS7002M_SDRDevice.h
src/boards_wxgui/: RFSpark_wxgui.h  pnlBoardControls.cpp  pnlBoardControls.h  pnlGPIO.cpp  pnlLimeSDR.cpp  pnlLimeSDR.h  pnlQSpark.cpp  pnlUltimateEVB.cpp  pnlX3.cpp  pnlX3.h  pnlX8.cpp  pnlXTRX.cpp  pnlXTRX.h  pnluLimeSDR.cpp
src/chips/: CMakeLists.txt
src/cli/: CMakeLists.txt  common.cpp  common.h  limeConfig.cpp  limeDevice.cpp  limeFLASH.cpp  limeOEM.cpp  limeOEMTest.cpp  limeSPI.cpp  limeTRX.cpp
src/comms/: CMakeLists.txt  IComms.h  IDMA.h  II2C.h  ISPI.h  SPIChipSelectShim.cpp  SPIChipSelectShim.h  SPI_utilities.cpp  SPI_utilities.h
src/examples/: CMakeLists.txt  basicRX.cpp  basicTX.cpp  dualRXTX.cpp
src/fftviewer_wxgui/: fftviewer_frFFTviewer.cpp  fftviewer_frFFTviewer.h
src/lime/: LimeSuite.h
src/limeRFE/: CMakeLists.txt  limeRFE_api.cpp
src/lms7002_wxgui/: SDRConfiguration_view.cpp  SDRConfiguration_view.h  lms7002_dlgGFIR_Coefficients.cpp  lms7002_dlgGFIR_Coefficients.h  lms7002_dlgVCOfrequencies.cpp  lms7002_gui_utilities.cpp  lms7002_gui_utilities.h  lms7002_mainPanel.cpp  lms7002_mainPanel.h  lms7002_pnlAFE_view.cpp  lms7002_pnlBIAS_view.cpp  lms7002_pnlBIAS_view.h  lms7002_pnlBIST_view.cpp  lms7002_pnlBIST_view.h  lms7002_pnlCDS_view.cpp  lms7002_pnlCDS_view.h  lms7002_pnlCLKGEN_view.cpp  lms7002_pnlCLKGEN_view.h  lms7002_pnlCalibrations_view.cpp  lms7002_pnlCalibrations_view.h  lms7002_pnlGains_view.cpp  lms7002_pnlGains_view.h  lms7002_pnlR3.h  (+22 more)
tests/: CMakeLists.txt  TestEntry.cpp  TestEntry.h  TestRunner.cpp  TestRunnerHardware.cpp  externalData.h
(+539 files in other folders)
